# e-commerke

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  TODO  docker-compose.yaml  pyproject.toml
apps/: admin.py  backends.py  filters.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
apps/fixtures/: banners.json  carts.json  category.json  products.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  banners.py  base.py  carts.py  products.py  users.py
env/: .env.example  .env.prod
root/: settings.py  urls.py
