[project]
name = "e-commerke"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "load-dotenv>=0.1.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
]
